--- a/app/views/movies/share.html.slim
+++ b/app/views/movies/share.html.slim
@@ -1,7 +1,6 @@
 .container.d-flex.justify-content-center.align-items-center style="height: 80vh"
   fieldset.border.p-2.w-50
-    legend.w-auto.float-none
-      | Share a Youtube movie
+    legend.w-auto.float-none = "Share a Youtube movie"
     = simple_form_for @movie, url: share_path, data: { turbo: false } do |f|
       = f.input :url, label: "Youtube URL:"
       = f.button :submit, "Share", class: "btn btn-primary mt-3"
