--- a/app/views/shared/_info.html.slim
+++ b/app/views/shared/_info.html.slim
@@ -1,5 +1,5 @@
 .d-flex.align-items-center
   p.h6.me-2.mb-0
-    | Wellcome #{current_user.email}
+    = "Wellcome #{current_user.email}"
   = link_to "Share a move", share_path, class: "btn btn-primary me-2"
-  = link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger"
+  = link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger", data: { turbo_method: :delete }
