--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-light.bg-light
+nav.navbar.navbar-light.bg-light.fixed-top
   .container-fluid.d-flex.justify-content-between
     = link_to root_path, class: "navbar-brand d-flex" do
       i.bi.bi-house-door-fill
