--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,3 @@
-.container.mt-3 data-controller="home"
+session data-controller="home"
   - @movies.each do |movie|
-    = render 'movie', movie: movie
+    = render "movies/movie", movie: movie
